[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/Player/Player/UserInterface/scripts/PlayerStatsUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/PlayerStatsUI/health bar.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/PlayerStatsUI/energy progress.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/PlayerStatsUI/mana progress.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/PlayerStatsUI/health progress.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/PlayerStatsUI/mana bar.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/PlayerStatsUI/energy bar.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 3.5 )

[node name="PlayerStatsUI" type="Control"]
script = ExtResource( 1 )

[node name="EnergyBg" type="TextureRect" parent="."]
margin_right = 19.0
margin_bottom = 74.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="ManaBg" type="TextureRect" parent="."]
margin_left = 19.0
margin_right = 38.0
margin_bottom = 74.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="HealthBg" type="TextureRect" parent="."]
margin_left = 38.0
margin_right = 57.0
margin_bottom = 74.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="HealthPgBar" type="TextureProgress" parent="."]
margin_left = 43.0
margin_top = 19.0
margin_right = 52.0
margin_bottom = 69.0
mouse_filter = 2
value = 90.0
texture_progress = ExtResource( 5 )
fill_mode = 3
nine_patch_stretch = true

[node name="EnergyPgBar" type="TextureProgress" parent="."]
margin_left = 5.0
margin_top = 19.0
margin_right = 14.0
margin_bottom = 69.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 3 )
fill_mode = 3

[node name="ManaPgBar" type="TextureProgress" parent="."]
margin_left = 24.0
margin_top = 19.0
margin_right = 33.0
margin_bottom = 69.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true

[node name="ManaArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ManaArea"]
position = Vector2( 67, 16 )
shape = SubResource( 1 )
disabled = true

[node name="HealthArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthArea"]
position = Vector2( 67, 6.5 )
shape = SubResource( 1 )
disabled = true

[node name="EnergyArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnergyArea"]
position = Vector2( 67, 26 )
shape = SubResource( 1 )
disabled = true

[connection signal="mouse_entered" from="ManaArea" to="." method="_on_ManaArea_mouse_entered"]
[connection signal="mouse_exited" from="ManaArea" to="." method="_on_ManaArea_mouse_exited"]
[connection signal="mouse_entered" from="HealthArea" to="." method="_on_HealthArea_mouse_entered"]
[connection signal="mouse_exited" from="HealthArea" to="." method="_on_HealthArea_mouse_exited"]
[connection signal="mouse_entered" from="EnergyArea" to="." method="_on_EnergyArea_mouse_entered"]
[connection signal="mouse_exited" from="EnergyArea" to="." method="_on_EnergyArea_mouse_exited"]
